--- a/public/index.html
+++ b/public/index.html
@@ -89,19 +89,35 @@
         return;
       }
 
-      let html = `
-  <p><strong>${dados.nome1}</strong>: ${dados.flightTotal1} &nbsp; | &nbsp; 
-  <strong>${dados.nome2}</strong>: ${dados.flightTotal2}</strong></p>
+     const mesesMap = {
+  '01': 'Janeiro',
+  '02': 'Fevereiro',
+  '03': 'Março',
+  '04': 'Abril',
+  '05': 'Maio',
+  '06': 'Junho',
+  '07': 'Julho',
+  '08': 'Agosto',
+  '09': 'Setembro',
+  '10': 'Outubro',
+  '11': 'Novembro',
+  '12': 'Dezembro'
+};
+
+let mesExibido = mesesMap[dados.mesReferencia] || 'Mês';
+
+let html = `
+  <p><strong>${dados.nome1} - ${mesExibido}</strong>: ${dados.flightTotal1} &nbsp; | &nbsp; 
+  <strong>${dados.nome2} - ${mesExibido}</strong>: ${dados.flightTotal2}</strong></p>
   <table>
 `;
 html += `
   <tr>
     <th>Data</th>
-    <th>${dados.nome1 || 'Escala 1'}</th>
-    <th>${dados.nome2 || 'Escala 2'}</th>
+    <th>${dados.nome1 || 'Escala 1'} - ${mesExibido}</th>
+    <th>${dados.nome2 || 'Escala 2'} - ${mesExibido}</th>
   </tr>
 `;
-
 
       dados.escalas.forEach(item => {
         html += `
