--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             `;
           }
 
-          const matchVoo = texto.match(/^(AD\s?\d+).*?(\d{2}:\d{2}\s*-\s*\d{2}:\d{2}).*?([A-Z]{3}\s*-\s*[A-Z]{3})/);
+          const matchVoo = texto.match(/^(AD\s?\d{3,4})\b.*?(\d{2}:\d{2}\s*-\s*\d{2}:\d{2}).*?([A-Z]{3}\s*-\s*[A-Z]{3})/);
           if (matchVoo) {
             return `
               <div style="display: grid; grid-template-columns: 100px 110px 1fr; gap: 4px;">
